Application-CD/APP/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: app
  name: app
  namespace: app
spec:
  type: ClusterIP
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: app
